--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(255, 0, 0);
 }
 
 .App-link {
@@ -44,11 +44,143 @@
   padding: 0;
   display: flex;
   justify-content: center;
-  background: #e1e1e1;
+  background: rgb(0,171,173);
+  background: linear-gradient(180deg, rgba(0,171,173,1) 0%, rgba(211,211,211,1) 100%);
 }
 
 .nav li {
   padding: 20px;
   background: #f1f1f1;
   border: 1px solid #e4e4e4;
+  border-radius: 5px;
+    border: 1px solid gray;
+    box-shadow: 0 3px 2px #0e475e;
+    background: rgba(137, 213, 214, 0.72);
+}
+
+h1 {
+  background-color: #3ab4a9;
+    border-radius: 8px;
+    border: 1px solid gray;
+    box-shadow: 0 3px 2px black ;
+    color: black;
+    font-family: "Arial Rounded MT Bold", sans-serif;
+}
+
+textarea{
+  min-width: 20vh;
+  height: 40px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  box-shadow: 0 3px 2px black ;
+  margin: 8px;
+  align-items: center;
+}
+
+button {
+  cursor: pointer;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: black;
+  background-color: #3bc9bd;
+  text-align: center;
+  line-height: 2rem;
+  border: .0625rem solid black;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: medium;
+  padding-left: .25rem;
+  padding-right: .25rem;
+  box-shadow: 0 2px 1px #4b4b4b;
+  align-self: center;
+}
+
+input {
+  font-family: "Arial Rounded MT Bold", sans-serif;
+  height:2rem;
+  border-radius: 8px;
+  border: 1px solid gray;
+  box-shadow: 0 3px 2px black ;
+  margin: 8px;
+  align-items: center;
+}
+body{
+  background: lightgrey;
+  display: grid;
+  min-width: 450px;
+  grid-gap: 10px;
+  grid-template-columns: 1fr;
+  grid-template-areas: "main" "footer";
+  grid-template-rows: 1fr 60px;
+}
+
+.box-shadow{
+  border-radius: 5px;
+  border: 1px solid gray;
+  box-shadow: 0 1px 1px darkgrey ;
+  margin: 5px;
+}
+
+.section-header{
+  border-radius: 8px;
+  border: 1px solid gray;
+  box-shadow: 0 3px 2px black ;
+  color: black;
+  font-size: medium;
+  font-weight: bold;
+  font-family: "Arial Rounded MT Bold", sans-serif;
+  background-color: rgba(137, 213, 214, 0.72);
+  min-width: 250px;
+  margin: 5px;
+}
+
+.userName{
+  color: black;
+  font-size: medium;
+  font-weight: bold;
+  border-radius: 5px;
+  border: 1px solid gray;
+  box-shadow: 0 1px 1px black;
+  background-color: rgba(137, 213, 214, 0.72);
+  min-width: 200px;
+  min-height: auto;
+  margin: 10px;
+}
+
+.send-request{
+  cursor: pointer;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: black;
+  background-color: #3bc9bd;
+  text-align: center;
+  line-height: 1.3rem;
+  border: .0625rem solid black;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: medium;
+  padding-left: .25rem;
+  padding-right: .25rem;
+  box-shadow: 0 2px 1px #4b4b4b;
+  align-self: center;
+}
+.conversation{
+  margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 8px;
+    border: 1px solid gray;
+    box-shadow: 0 3px 2px black ;
+}
+
+.flex-container{
+  display:grid;
+  grid-row: 80vh;
+  -ms-grid-column-align: center;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  flex-wrap: nowrap;
+  min-width: 400px;
+  max-height: 800px;
 }
